--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
     <!-- <script src="q1.js"></script> -->
     <!-- <script src="q2.js"></script> -->
-    <script src="q3.js"></script>
+    <!-- <script src="q3.js"></script> -->
+    <!-- <script src="q4.js"></script> -->
+    <script src="q5.js"></script>
   </head>
   <body></body>
 </html>
